--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ a, a:hover, a:focus {
     color: #fff ;
 }
 #sidebar ul li a:hover {
-    color: #000;
+    color: #fff;
     background: #transparent;
 }
 
