--- a/tralkastyle.css
+++ b/tralkastyle.css
@@ -10,11 +10,16 @@ body {
     background-image: linear-gradient(to bottom right, #a2b2bd, #def7f7);
 }
 */
+/*
 body {
     font-family: 'Poppins', sans-serif;
     background-image: linear-gradient(360deg, #a2b2bd 80.25%, #def7f7);
-}
+}*/
 
+body {
+    font-family: 'Poppins', sans-serif;
+    background-image: linear-gradient(97deg, #a2b2bd 36.13%, #def7f7 50.84%, rgb(193, 214, 219) 60.08%);
+}
 
 p {
     font-family: 'Poppins', sans-serif;
