--- a/tralkastyle.css
+++ b/tralkastyle.css
@@ -23,7 +23,7 @@ body {
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-image: linear-gradient(to top botton, #a2b2bd 36.13%, #def7f7 50.84%, rgb(193, 214, 219) 60.08%);
+    background-image: linear-gradient(97deg, #a2b2bd 36.13%, #def7f7 50.84%, rgb(193, 214, 219) 60.08%);
 }
 
 p {
