--- a/tralkastyle.css
+++ b/tralkastyle.css
@@ -23,7 +23,7 @@ body {
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-image: linear-gradient(97deg, #b7c8d4 39.5%, #def7f7 47.06%, rgb(193, 214, 219) 55.04%);
+    background-image: linear-gradient(92deg, #3c575d 20.17%, #c8ffff 47.06%, rgb(75, 123, 133) 71.85%);
 }
 
 p {
