--- a/tralkastyle.css
+++ b/tralkastyle.css
@@ -31,7 +31,7 @@ p {
     font-size: 0.9em;
     font-weight: 300;
     line-height: 1.7em;
-    color: #fff;
+    color: #000;
 }
 
 a, a:hover, a:focus {
