--- a/tralkastyle.css
+++ b/tralkastyle.css
@@ -20,10 +20,14 @@ body {
     font-family: 'Poppins', sans-serif;
     background-image: linear-gradient(97deg, #a2b2bd 36.13%, #def7f7 50.84%, rgb(193, 214, 219) 60.08%);
 }*/
-
+/*
 body {
     font-family: 'Poppins', sans-serif;
     background-image: linear-gradient(92deg, #3c575d 20.17%, #c8ffff 47.06%, rgb(75, 123, 133) 71.85%);
+}*/
+body {
+    font-family: 'Poppins', sans-serif;
+    background-image: linear-gradient(92deg, #fff 20.17%, #fff 47.06%, rgb(75, 123, 133) 71.85%);
 }
 
 p {
