--- a/tralkastyle.css
+++ b/tralkastyle.css
@@ -37,6 +37,13 @@ p {
     line-height: 1.7em;
     color: #000;
 }
+p2 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 0.6em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #000;
+}
 
 a, a:hover, a:focus {
     color: inherit;
